Commit No.2 modified cover pages and updated latest issue

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                     <p>Be it globalization or global warming, Sandesha is always at the forefront of burning issues. Not to mention articles that unearth the hidden treasures in Samskritam texts. There are sections suited for beginners, children, adult and advanced students. Comics, short stories, serials, puzzles and thought-provoking articles are some of the highlights of this wonderful monthly magazine.</p>
                 </div>
                 <div class="current_issue">
-                    <a class="journal" href="php/toc.php?volume=019&amp;issue=12">
+                    <a class="journal" href="php/toc.php?volume=020&amp;issue=01">
                         <img src="php/images/latestissue.png" alt="latest_issue" />
-                        <p class="journal_number">Volume 19 <br> September 2014</p>
+                        <p class="journal_number">Volume 20 <br> October 2014</p>
                     </a>
                 </div>
             </div>
@@ -73,7 +73,7 @@
 					<li><a href="php/show_article.php?letter=अ">Articles</a></li>
 					<li><a href="php/show_author.php?letter=अ">Authors</a></li>
 					<li><a href="php/feature.php">Category</a></li>
-					<li><a href="#">Search</a></li>
+					<li><a href="php/search.php">Search</a></li>
                 </ul>
             </div>
         </div>
